Update icons and copy, fix small spacing issue on main title

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -125,6 +125,9 @@ hr.double {
 }
 
 @media screen and (max-width: 848px) {
+  .main-title {
+    padding-bottom: 8px !important;
+  }
   .avatar {
     padding: 24px;
   }
